@@ -3,7 +3,8 @@ Section: python
 Priority: optional
 Maintainer: Jan Dittberner <jandd@debian.org>
 Build-Depends: debhelper (>= 7.0.50)
-Build-Depends-Indep: python (>= 2.5.4-1~), python-sphinx (>= 0.6.1)
+Build-Depends-Indep: python (>= 2.5.4-1~), python-sphinx (>= 0.6.1),
+ python-support (>= 0.6.4)
 Standards-Version: 3.8.4
 Homepage: http://www.doughellmann.com/projects/virtualenvwrapper/
 Vcs-Git: git://git.debian.org/collab-maint/virtualenvwrapper.git
@@ -11,7 +12,8 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/virtualenvwrapper.git
 
 Package: virtualenvwrapper
 Architecture: all
-Depends: ${misc:Depends}, python-virtualenv, bash-completion, libjs-jquery
+Depends: ${python:Depends}, ${misc:Depends}, python-virtualenv,
+ bash-completion, libjs-jquery
 Description: extension to virtualenv for managing multiple virtual Python environments
  virtualenvwrapper is a set of extensions to Ian Bicking's virtualenv
  tool. The extensions include wrappers for creating and deleting
